tests/ui/layout/unknown-when-ptr-metadata-is-DST.stderr
warning: cannot use constants which depend on trivially-false where clauses
  --> $DIR/unknown-when-ptr-metadata-is-DST.rs:8:10
   |
LL |     [(); { let _a: Option<&str> = None; 0 }];
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #76200 <https://github.com/rust-lang/rust/issues/76200>
   = note: `#[warn(const_evaluatable_unchecked)]` on by default

error[E0080]: evaluation of constant value failed
  --> $DIR/unknown-when-ptr-metadata-is-DST.rs:8:16
   |
LL |     [(); { let _a: Option<&str> = None; 0 }];
   |                ^^ the type `str` has an unknown layout

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
